Update and rename cici-workflow.yml to cici-workflow-linear.yml

--- a/.github/workflows/cici-workflow-linear.yml
+++ b/.github/workflows/cici-workflow-linear.yml
@@ -1,6 +1,6 @@
-# .github/workflows/cici-workflow.yml
+# .github/workflows/cici-workflow-linear.yml
 
-name: CICI Workflow
+name: CICI Workflow LINEAR
 
 on:
   push:
